Upgraded to jetcd 0.3.0 (#43)