@@ -21,17 +21,17 @@ import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import com.coreos.jetcd.Client;
-import com.coreos.jetcd.KV;
-import com.coreos.jetcd.Lease;
-import com.coreos.jetcd.api.KeyValue;
-import com.coreos.jetcd.api.RangeResponse;
-import com.coreos.jetcd.data.ByteSequence;
-import com.coreos.jetcd.kv.GetResponse;
-import com.coreos.jetcd.lease.LeaseGrantResponse;
-import com.coreos.jetcd.lease.LeaseKeepAliveResponse;
-import com.coreos.jetcd.lease.LeaseRevokeResponse;
 import com.rackspace.salus.telemetry.etcd.EtcdProperties;
+import com.rackspace.salus.telemetry.etcd.EtcdUtils;
+import io.etcd.jetcd.Client;
+import io.etcd.jetcd.KV;
+import io.etcd.jetcd.Lease;
+import io.etcd.jetcd.api.KeyValue;
+import io.etcd.jetcd.api.RangeResponse;
+import io.etcd.jetcd.kv.GetResponse;
+import io.etcd.jetcd.lease.LeaseGrantResponse;
+import io.etcd.jetcd.lease.LeaseKeepAliveResponse;
+import io.etcd.jetcd.lease.LeaseRevokeResponse;
 import java.util.concurrent.CompletableFuture;
 import org.junit.Before;
 import org.junit.Test;
@@ -82,7 +82,7 @@ public class EnvoyLeaseTrackingTest {
 
     @Test
     public void testRetrieve() {
-        when(kv.get(ByteSequence.fromString("/tenants/t1/envoysById/e1")))
+        when(kv.get(EtcdUtils.fromString("/tenants/t1/envoysById/e1")))
             .thenReturn(
                 CompletableFuture.completedFuture(
                     new GetResponse(RangeResponse.newBuilder()
@@ -96,11 +96,12 @@ public class EnvoyLeaseTrackingTest {
 
         final Long result = envoyLeaseTracking.retrieve("t1", "e1").join();
 
-        assertEquals(new Long(2000), result);
+        assertEquals(Long.valueOf(2000), result);
     }
     @Test
     public void testLeases() {
-        Long leaseId = new Long(50);
+        @SuppressWarnings("WrapperTypeMayBePrimitive")
+        Long leaseId = 50L;
         String envoyInstance = "t1";
         
         when(etcd.getLeaseClient()).thenReturn(lease);
